feat : #22 - 서비스 등록 페이지 구현 완료

--- a/src/main/resources/templates/service/registration.html
+++ b/src/main/resources/templates/service/registration.html
@@ -2,6 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:insert="~{fragment/header :: header}"></div>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+
+
 </head>
 
 <body>
@@ -10,63 +19,80 @@
 
 <div class="main-wrapper">
 
+    <!-- 헤딩 -->
     <section class="cta-section theme-bg-light py-5">
-        <div class="container text-center single-col-max-width">
-            <h2 class="heading">Contact</h2>
-            <div class="intro">
-                <p>Interested in hiring me for your project or just want to say hi? You can fill in the contact form below or send me an email to <a  class="text-link" href="mailto:#">simon.doe@yourwebsite.com</a></p>
-                <p>Want to get connected? Follow me on the social channels below.</p>
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item mb-3"><a class="twitter" href="#"><i class="fab fa-twitter fa-fw fa-lg"></i></a></li>
-
-                    <li class="list-inline-item mb-3"><a class="linkedin" href="#"><i class="fab fa-linkedin-in fa-fw fa-lg"></i></a></li>
-                    <li class="list-inline-item mb-3"><a class="github" href="#"><i class="fab fa-github-alt fa-fw fa-lg"></i></a></li>
-                    <li class="list-inline-item"><a class="instagram" href="#"><i class="fab fa-instagram fa-fw fa-lg"></i></a></li>
-                    <li class="list-inline-item mb-3"><a class="stack-overflow" href="#"><i class="fab fa-stack-overflow fa-fw fa-lg"></i></a></li>
-                    <li class="list-inline-item mb-3"><a class="medium" href="#"><i class="fab fa-medium-m fa-fw fa-lg"></i></a></li>
-                    <li class="list-inline-item mb-3"><a class="codepen" href="#"><i class="fab fa-codepen fa-fw fa-lg"></i></a></li>
-
-
-                    <!--<li class="list-inline-item mb-3"><a class="facebook" href="#"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a></li>-->
-
-
-                </ul><!--//social-list-->
-
-            </div><!--//container-->
+        <div class="container text-center">
+            <h2 class="heading">Service Registration</h2>
+        </div><!--//container-->
     </section>
+
 
     <section class="contact-section px-3 py-5 p-md-5">
         <div class="container">
-            <form id="contact-form" class="contact-form col-lg-8 mx-lg-auto" method="post" action="">
-                <h3 class="text-center mb-3">Get In Touch</h3>
+            <form th:object="${serviceRegisterForm}" id="contact-form" class="contact-form col-lg-8 mx-lg-auto"  name="register" th:action method="post" enctype="multipart/form-data">
+
+                <hr>
+                <br>
                 <div class="row g-3">
-                    <div class="col-12 col-md-6">
-                        <label class="sr-only" for="cname">Name</label>
-                        <input type="text" class="form-control" id="cname" name="name" placeholder="Name" minlength="2" required="" aria-required="true">
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <label class="sr-only" for="cemail">Email</label>
-                        <input type="email" class="form-control" id="cemail" name="email" placeholder="Email" required="" aria-required="true">
-                    </div>
+
+
                     <div class="col-12">
-                        <select id="services" class="form-select" name="services">
-                            <option selected>Select a service package you're interested in...</option>
-                            <option value="basic">Basic</option>
-                            <option value="standard">Standard</option>
-                            <option value="premium">Premium</option>
-                            <option value="not sure">Not sure</option>
-                        </select>
-                        <div class="mt-2">
-                            <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>Want to know what's included in each package? Check the <a class="text-link" href="services.html" target="_blank">Services &amp; Pricing</a> page.</small>
-                        </div>
+                        <label class="sr-only" for="serviceName">serviceName</label>
+                        <input type="text" class="form-control" id="serviceName" name="serviceName" placeholder="serviceName" required="" aria-required="true">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>간단한 서비스 설명해주세요</small>
                     </div>
+
+
+                    <div class="col-12 col-md-6">
+                        <label class="sr-only" for="logo">LOGO</label>
+                        <input type="file" class="form-control" id="logo" name="logoFile" placeholder="LOGO" minlength="2" required="" aria-required="true">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 로고를 선택해주세요</small>
+                    </div>
+
+                    <div class="col-12 col-md-6">
+                        <label class="sr-only" for="servicesUrl">URL</label>
+                        <input type="url" class="form-control" id="servicesUrl" name="servicesUrl" placeholder="URL" required="" aria-required="true">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스 URL을 작성해주세요</small>
+                    </div>
+
+
+
                     <div class="col-12">
-                        <label class="sr-only" for="cmessage">Your message</label>
-                        <textarea class="form-control" id="cmessage" name="message" placeholder="Enter your message" rows="10" required="" aria-required="true"></textarea>
+                        <label class="sr-only" for="title">Title</label>
+                        <input type="text" class="form-control" id="title" name="title" placeholder="Title" required="" aria-required="true">
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>간단한 서비스 설명해주세요</small>
                     </div>
+
+
+                    <div class="col-12">
+                        <label class="sr-only" for="content">explain About Service ... </label>
+                        <textarea class="form-control" id="content" name="content" placeholder="explain About Service ... " rows="10" required="" aria-required="true"></textarea>
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스를 설명해주세요</small>
+                    </div>
+
+                    <div class="col-12">
+                        <script type="text/javascript">
+                            $('#example-multiple-selected').multiselect();
+                        </script>
+                            <div>
+                                    <label>Select category</label>
+                                    <select name="categoryNames" multiple="" class="label ui selection fluid dropdown">
+                                        <option value="">카테고리 선택</option>
+                                        <option th:each="category : ${categories}"
+                                                th:value="${category}"
+                                                th:text="${category}">FAST</option>
+                                    </select>
+                            </div>
+                        <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>서비스의 카테고리를 선택해주세요</small>
+                    </div>
+
+                    <hr>
+                    <br>
+
                     <div class="form-group col-12">
-                        <button type="submit" class="btn btn-block btn-primary py-2">Send Now</button>
+                        <button type="submit"  class="btn btn-block btn-primary py-2">등록</button>
                     </div>
+
                 </div><!--//form-row-->
             </form>
         </div><!--//container-->
@@ -75,6 +101,12 @@
     <div th:insert="~{fragment/footer :: footer}"></div>
 
 </div><!--//main-wrapper-->
+
+<script src="/js/jquery.min.js"></script>
+<script src="/js/popper.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.js"></script>
+<script src="/js/main.js"></script>
 
 <div th:insert="~{fragment/library :: libraries}"></div>
 
