--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -20,10 +20,10 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
         <!-- FontAwesome JS -->
-        <script defer src="assets/fontawesome/js/all.js"></script>
+        <script defer src="/assets/fontawesome/js/all.js"></script>
 
         <!-- Theme CSS -->
-        <link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
+        <link id="theme-style" rel="stylesheet" href="/assets/css/theme-1.css">
     </div>
 </body>
 </html>
