--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -3,7 +3,7 @@
 <body>
 <header class="header text-center" th:fragment="sidebar">
     <div class="force-overflow">
-        <h1 class="blog-name pt-lg-4 mb-0"><a class="no-text-decoration" href="index.html">Simon Doe</a></h1>
+        <h1 class="blog-name pt-lg-4 mb-0"><a class="no-text-decoration" href="index.html">Impati</a></h1>
 
         <nav class="navbar navbar-expand-lg navbar-dark" >
 
@@ -13,7 +13,7 @@
 
             <div id="navigation" class="collapse navbar-collapse flex-column" >
                 <div class="profile-section pt-3 pt-lg-0">
-                    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image" >
+                    <img class="profile-image mb-3 rounded-circle mx-auto" src="/assets/images/impati.jpeg" alt="image" >
 
                     <div class="bio mb-3">Hi, my name is Simon Doe and I'm a senior software engineer. Welcome to my personal website!</div><!--//bio-->
                     <ul class="social-list list-inline py-2 mx-auto">
