feat : #26 - 헤더에 메타 정보 추가

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -10,10 +10,12 @@
 
         <!-- Meta -->
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="DevCard Bootstrap 5 Template">
-        <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+        <meta property="og:title" content="SERViCE HUB" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://impatient.iptime.org:8080" />
+        <meta property="og:image" content="http://impatient.iptime.org:8080/logo/youtube-logo.png" />
+
+
         <link rel="shortcut icon" href="favicon.ico">
 
         <!-- Google Fonts -->
