feat : #27 - 크롤링 이용하여 서비스 저장 뷰 구현

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -13,11 +13,9 @@
         <meta property="og:title" content="SERViCE HUB" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://impatient.iptime.org:8080" />
-        <meta property="og:image" content="http://impatient.iptime.org:8080/logo/youtube-logo.png" />
-
+        <meta property="og:image" content="http://impatient.iptime.org:8080/logo/impati.jpeg" />
 
         <link rel="shortcut icon" href="favicon.ico">
-
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
