--- a/src/main/resources/templates/service/registration.html
+++ b/src/main/resources/templates/service/registration.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
     <link rel="stylesheet" href="/css/style.css">
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" rel="stylesheet">
 
 </head>
 
@@ -71,7 +71,7 @@
                     </div>
 
 
-                    <div class="col-12">
+                    <div class="col-12 markdown-body">
                         <label class="sr-only" for="title">Title</label>
                         <input type="text" class="form-control" id="title" name="title" placeholder="Title" th:value="${metaData.title}" required="" aria-required="true">
                         <small class="form-text text-muted pt-1"><i class="fas fa-info-circle me-2 text-primary"></i>간단한 서비스 설명해주세요</small>
