refactor : #33 - 사이드바 수정

--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -15,51 +15,24 @@
                 <div class="profile-section pt-3 pt-lg-0">
                     <img class="profile-image mb-3 rounded-circle mx-auto" src="/assets/images/impati.jpeg" alt="image" >
 
-                    <div class="bio mb-3">Hi, my name is Simon Doe and I'm a senior software engineer. Welcome to my personal website!</div><!--//bio-->
-                    <ul class="social-list list-inline py-2 mx-auto">
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-codepen fa-fw"></i></a></li>
-                    </ul><!--//social-list-->
+                    <div class="bio mb-3">Hi, my name is jun young . Welcome to my personal website!</div><!--//bio-->
                     <hr>
                 </div><!--//profile-section-->
 
                 <ul class="navbar-nav flex-column text-start">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><i class="fas fa-user fa-fw me-2"></i>About Me</a>
+                        <a class="nav-link" th:href="@{/client}"><i class="fas fa-user fa-fw me-2"></i>Mypage</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html"><i class="fas fa-laptop-code fa-fw me-2"></i>Portfolio</a>
+                        <a class="nav-link" th:href="@{/service/search}"><i class="fas fa-laptop-code fa-fw me-2"></i>서비스 검색</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html"><i class="fas fa-briefcase fa-fw me-2"></i>Services &amp; Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="resume.html"><i class="fas fa-file-alt fa-fw me-2"></i>Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="blog-home.html"><i class="fas fa-blog fa-fw me-2"></i>Blog<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html"><i class="fas fa-envelope-open-text fa-fw me-2"></i>Contact</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-cogs fa-fw me-2"></i>More Pages
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="project.html">Project Page</a></li>
-                            <li><a class="dropdown-item" href="blog-home.html">Blog Home 1</a></li>
-                            <li><a class="dropdown-item" href="blog-home-alt.html">Blog Home 2</a></li>
-                            <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
-                        </ul>
+                        <a class="nav-link" th:href="@{/service/registration}"><i class="fas fa-briefcase fa-fw me-2"></i>서비스 등록</a>
                     </li>
                 </ul>
 
                 <div class="my-2">
-                    <a class="btn btn-primary" href="contact.html" target="_blank"><i class="fas fa-paper-plane me-2"></i>Hire Me</a>
+                    <a class="btn btn-primary" th:href="@{https://notion.so}" target="_blank"><i class="fas fa-paper-plane me-2"></i>MY BLOG</a>
                 </div>
 
 
