feat : #34 -로그인 및 회원가입을 위한 뷰 수정

--- a/src/main/resources/templates/service/search.html
+++ b/src/main/resources/templates/service/search.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
-  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -17,6 +16,8 @@
 <div th:insert="~{fragment/sidebar :: sidebar}"></div>
 
 <div class="main-wrapper">
+
+  <div th:insert="~{fragment/toolbar :: toolbar}"></div>
 
   <section class="cta-section theme-bg-light py-5">
     <div class="container text-center single-col-max-width">
