--- a/src/main/resources/templates/client/client-page.html
+++ b/src/main/resources/templates/client/client-page.html
@@ -10,9 +10,11 @@
 
 <div class="main-wrapper">
 
+    <div th:insert="~{fragment/toolbar :: toolbar}"></div>
+
     <section class="cta-section theme-bg-light py-5">
         <div class="container text-center single-col-max-width">
-            <h2 class="heading">나의 서비스 페이지</h2>
+            <h2 class="heading">나의 서비스 목록</h2>
             <div class="intro"></div>
             <div class="single-form-max-width pt-3 mx-auto">
                 <form  th:action  method="get">
