--- a/src/main/resources/templates/service/registration.html
+++ b/src/main/resources/templates/service/registration.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/semantic.min.css">
-    <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" rel="stylesheet">
 
 </head>
@@ -18,6 +17,8 @@
 <div th:insert="~{fragment/sidebar :: sidebar}"></div>
 
 <div class="main-wrapper">
+
+    <div th:insert="~{fragment/toolbar :: toolbar}"></div>
 
     <!-- 헤딩 -->
     <section class="cta-section theme-bg-light py-5">
