--- a/src/main/resources/templates/service/service-edit-page.html
+++ b/src/main/resources/templates/service/service-edit-page.html
@@ -10,6 +10,9 @@
 <div th:insert="~{fragment/sidebar :: sidebar}"></div>
 
 <div class="main-wrapper">
+
+  <div th:insert="~{fragment/toolbar :: toolbar}"></div>
+
   <section class="cta-section theme-bg-light py-5">
     <div class="container text-center single-col-max-width">
       <h1 class="heading mb-3" th:text="${singleServiceWithCommentsDto.serviceName}">ServiceName</h1>
