feat : #34 - 타임리프와 스프링 시큐리티 통합 및 로그인 사용자 뷰 처리

--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -3,7 +3,7 @@
 <body>
 <header class="header text-center" th:fragment="sidebar">
     <div class="force-overflow">
-        <h1 class="blog-name pt-lg-4 mb-0"><a class="no-text-decoration" href="index.html">Impati</a></h1>
+        <h1 class="blog-name pt-lg-4 mb-0"><a class="no-text-decoration" href="index.html" th:text="${#authentication.getName()}">SERVICE HUB</a></h1>
 
         <nav class="navbar navbar-expand-lg navbar-dark" >
 
