--- a/src/main/resources/templates/service/service-edit-page.html
+++ b/src/main/resources/templates/service/service-edit-page.html
@@ -91,8 +91,6 @@
             <div class="meta" style="text-align: right">
               <div class="name"th:text="${comment.createBy}">James Lee</div>
               <div class="info"th:text="${comment.createAt}">James Lee</div>
-              <span><a class="text-link" th:href="@{/comments/edit/{serviceId}/{commentId} (serviceId = ${singleServiceWithCommentsDto.serviceId},commentId=${comment.commentId})}">수정</a></span>
-              <span><a class="text-link" th:href="@{/comments/delete/{serviceId}/{commentId} (serviceId = ${singleServiceWithCommentsDto.serviceId},commentId=${comment.commentId})}">삭제</a></span>
             </div>
           </div>
           <br>
@@ -104,7 +102,7 @@
           <form th:action="@{/comments/edit}" method="post">
             <input type="hidden" id="serviceId" th:value="${singleServiceWithCommentsDto.serviceId}" name="serviceId">
 
-            <input type="hidden" id="commentId" th:value="${commentId}" name="serviceCommentsId">
+            <input type="hidden" id="commentId" th:value="${commentId}" name="commentId">
             <input type="text" class="form-control" name="content"  th:value="${commentContent}" id="content" rows="1"></input>
             <br>
             <div style="text-align: right">
