--- a/src/main/resources/templates/fragment/toolbar.html
+++ b/src/main/resources/templates/fragment/toolbar.html
@@ -54,7 +54,7 @@
 
             <!-- Nav Item - Alerts -->
             <li class="nav-item no-arrow mx-1" sec:authorize="isAnonymous()"><a class="nav-link btn btn-outline-light me-2" th:href="@{/login}">로그인</a></li>
-            <li class="nav-item no-arrow mx-1" sec:authorize="isAuthenticated()"> <a class="nav-link btn btn-outline-light me-2" th:href="@{/logout}">로그아웃</a></li>
+            <li class="nav-item no-arrow mx-1" sec:authorize="isAuthenticated()"> <form class="form-text" th:action="@{/logout}" method="post"><button type="submit" class="nav-link btn btn-outline-light me-2">로그아웃</button></form></li>
             <li class="nav-item no-arrow mx-1" sec:authorize="isAnonymous()"> <a class="nav-link btn btn-outline-light me-2" th:href="@{/signup}">회원가입</a></li>
 
             <!-- Nav Item - User Information -->
