--- a/src/main/resources/templates/service/search.html
+++ b/src/main/resources/templates/service/search.html
@@ -55,21 +55,28 @@
 
   <section class="blog-list px-3 pr-0 p-md-5">
     <div class="container  single-col-max-width">
-      <div class="card mb-sm-3 " style="height: 10%" th:each="service : ${searchedServices}">
-        <div class="row" style="line-height: 30%">
 
-          <div class="col-md-2">
-            <img class="img-fluid rounded-start" width="50%" th:src='@{http://impatient.iptime.org:8080/logo/{store} (store=${service.logoStoreName})}' alt="image">
-          </div>
+        <div class="card mb-sm-3 " style="height: 10%" th:each="service : ${searchedServices}">
 
-          <div class="col-md-8 card-body"> <a class="text-link" th:href="${service.serviceUrl}">
-            <h5 class="title card-title" th:text="${service.serviceName}">Top 3 JavaScript Frameworks</h5></a>
-            <div style="text-align: right"><a class="text-link" href="blog-post.html" th:href="${service.serviceUrl}">서비스로 이동하기 &rarr;</a></div>
-            <span class="card-text text-truncate" th:text="${service.title}" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</span>
-          </div><!--//col-->
-        </div><!--//row-->
-      </div><!--//item-->
 
+            <div class="row" style="line-height: 30%">
+
+              <div class="col-md-2">
+                <a class="card-link"  th:href="${service.serviceUrl}">
+                  <img class="img-fluid rounded-start" width="50%" th:src='@{http://impatient.iptime.org:8080/logo/{store} (store=${service.logoStoreName})}' alt="image">
+                </a>
+              </div>
+
+              <div class="col-md-8 card-body">
+                <a class="card-link" th:href="${service.serviceUrl}">
+                  <h5 class="title card-title" th:text="${service.serviceName}">Top 3 JavaScript Frameworks</h5>
+                  <div style="text-align: right"><a class="text-link"  th:href="@{/service/{serviceId} (serviceId=${service.serviceId})}">서비스 정보보기 &rarr;</a></div>
+                  <span class="card-text text-truncate" th:text="${service.title}" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</span>
+                </a>
+              </div><!--//col-->
+            </div><!--//row-->
+
+        </div><!--//item-->
 
       <nav class="blog-nav nav nav-justified my-5">
         <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
